[package]
name = "image-diff"
version = "0.1.1"
authors = ["zeroclock <zeroclock@icloud.com>"]
repository = "https://github.com/zeroclock/image-diff"
readme = "README.md"
edition = "2018"
description = "An image diff library written in rust"
license = "MIT"
keywords = [
    "diff",
    "image",
]

[lib]
name = "image_diff"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
anyhow = "1.0.31"
